<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_titel_nav">
        <menu>
            <item
                android:id="@+id/nav_profil"
                android:icon="@drawable/ic_account_circle_white_24dp"
                android:title="@string/nav_profil" />
            <item
                android:id="@+id/nav_karte"
                android:icon="@drawable/ic_map_white_24dp"
                android:title="@string/nav_karte" />
        </menu>
    </item>

    <item android:title="@string/nav_titel_info">
        <menu>
            <item
                android:id="@+id/nav_ueber"
                android:icon="@drawable/ic_info_outline_white_24dp"
                android:title="@string/nav_titel_info" />
        </menu>
    </item>

</menu>
