<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:paddingEnd="24dp"
                android:paddingLeft="24dp"
                android:paddingStart="24dp"
                android:paddingTop="24dp"
                android:paddingRight="24dp">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:id="@+id/ivOffer"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/etTitel"
        android:scaleType="centerCrop"
        android:src="@drawable/add_image"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_title"
        android:id="@+id/tvTitle"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivOffer"
        android:layout_toEndOf="@+id/ivOffer"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTitel"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="text"
        android:layout_below="@+id/tvTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/ivOffer"
        android:layout_toEndOf="@+id/ivOffer"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_address"
        android:id="@+id/tvAddress"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_below="@+id/etTitel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etStreet"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvAddress"
        android:hint="@string/label_street"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPostal"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etStreet"
        android:hint="@string/label_city"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_description"
        android:id="@+id/tvDescription"
        android:textAllCaps="true"
        android:layout_below="@+id/etPostal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDescription"
        android:layout_below="@+id/tvDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/label_description_details"/>

</RelativeLayout>