<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:paddingEnd="@dimen/frag_margin"
                android:paddingLeft="@dimen/frag_margin"
                android:paddingRight="@dimen/frag_margin"
                android:paddingTop="@dimen/frag_margin"
                android:paddingStart="@dimen/frag_margin">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spUnterkunft"
        android:layout_below="@+id/tvUnterkunft"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="text"
        android:layout_below="@+id/tvName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMail"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/tvMail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_below="@+id/tvPasswort"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etConfirmation"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_below="@+id/tvConfirmation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_unterkunft"
        android:textAllCaps="true"
        android:id="@+id/tvUnterkunft"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_name"
        android:textAllCaps="true"
        android:id="@+id/tvName"
        android:layout_below="@+id/spUnterkunft"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textStyle="normal|bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_mail"
        android:textAllCaps="true"
        android:id="@+id/tvMail"
        android:layout_below="@+id/etName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textStyle="normal|bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_passwort"
        android:textAllCaps="true"
        android:id="@+id/tvPasswort"
        android:layout_below="@+id/etMail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textStyle="normal|bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_confirmation"
        android:textAllCaps="true"
        android:id="@+id/tvConfirmation"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textStyle="normal|bold"/>

</RelativeLayout>