<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/frag_margin">

    <TextView
        android:drawableRight="@drawable/ic_close_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btDeleteName"
        android:layout_alignBottom="@+id/etName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/etName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="text"
        android:layout_below="@+id/tvName"
        android:layout_toLeftOf="@+id/btDeleteName"
        android:layout_toStartOf="@+id/btDeleteName" />

    <TextView
        android:drawableRight="@drawable/ic_close_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btDeleteMail"
        android:layout_alignBottom="@+id/etMail"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/etMail" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMail"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/tvMail"
        android:layout_toLeftOf="@+id/btDeleteMail"
        android:layout_toStartOf="@+id/btDeleteMail" />

    <TextView
        android:drawableRight="@drawable/ic_close_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btDeletePasswort"
        android:layout_alignBottom="@+id/etPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/etPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_below="@+id/tvPasswort"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/btDeletePasswort"
        android:layout_toStartOf="@+id/btDeletePasswort" />

    <TextView
        android:drawableRight="@drawable/ic_close_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btDeleteConfirmation"
        android:layout_alignBottom="@+id/etConfirmation"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/etConfirmation" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etConfirmation"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_below="@+id/tvConfirmation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/btDeleteConfirmation"
        android:layout_toStartOf="@+id/btDeleteConfirmation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_name"
        android:id="@+id/tvName"
        android:layout_below="@+id/spUnterkunft"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_mail"
        android:id="@+id/tvMail"
        android:layout_below="@+id/etName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_passwort"
        android:id="@+id/tvPasswort"
        android:layout_below="@+id/etMail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_confirmation"
        android:id="@+id/tvConfirmation"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin" />

    <Button
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_bearbeiten_fertig"
        android:id="@+id/btExecute"
        android:layout_below="@+id/etConfirmation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/frag_margin" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_konto_loeschen"
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/btDeleteAccount"
        android:layout_below="@+id/btExecute"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin" />

</RelativeLayout>